<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_title_communicate">Comunicação</string>
    <string name="nav_principal">Principal</string>
    <string name="nav_servicos">Serviços</string>
    <string name="nav_cliente">Clientes</string>
    <string name="nav_contato">Contato</string>
    <string name="nav_sobre">Sobre</string>
</resources>
