<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/nav_principal" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_servicos" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_cliente" />
    </group>

    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/nav_contato" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_sobre" />
        </menu>
    </item>

</menu>
